--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -2,8 +2,8 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{KTH Royal Institute of Technology}{kth}
-\team{Omogen Heap}{Simon Lindholm, Johan Sannemo, Mårten Wiman}
+\university{SBU}{Stony Brook University}{kth}
+\team{SBU Gym Bros}{James Leung, William Lee, Alexander Joukov}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
 \contest{\ }{\today}
 % \enablecolors
