Replace University Name and Logo, updated README.md

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -2,10 +2,10 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{SBU}{Stony Brook University}{kth}
+\university{SBU}{Stony Brook University}{sbu.pdf}
 \team{SBU Gym Bros}{James Leung, William Lee, Alexander Joukov}
-% \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
-\contest{\ }{\today}
+\contest{ACM-ICPC Regionals 2024}{November 10, 2024}
+% \contest{\ }{\today}
 % \enablecolors
 
 \begin{document}
