--- a/content/test-session/test-session.tex
+++ b/content/test-session/test-session.tex
@@ -2,7 +2,7 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{}{}
+\university{SBU}{}{}
 
 \begin{document}
 	\begin{multicols*}{3}
