Update for Selection Contest

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -3,8 +3,8 @@
 \kactlcontentdir{content}
 
 \university{SBU}{Stony Brook University}{sbu.pdf}
-\team{SBU Gym Bros}{James Leung, William Lee, Alexander Joukov}
-\contest{ACM-ICPC Regionals 2024}{November 10, 2024}
+\team{SBU Gym Bros}{James Leung}
+\contest{SBU ICPC Selection Contest}{October 10, 2025}
 % \contest{\ }{\today}
 % \enablecolors
 
