--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -3,8 +3,8 @@
 \kactlcontentdir{content}
 
 \university{SBU}{Stony Brook University}{sbu.pdf}
-\team{SBU Gym Bros}{James Leung}
-\contest{SBU ICPC Selection Contest}{October 10, 2025}
+\team{SBU Gym Bros}{James Leung, Samridh Samridh, Tuan Son Dao}
+\contest{ICPC GNY Regional}{November 9, 2025}
 % \contest{\ }{\today}
 % \enablecolors
 
